cloud-infra-core/tests/fails/no_read_capacity_for_pay_per_request.stderr
error[E0599]: no method named `read_capacity` found for struct `DynamoDBTableBuilder<PayPerRequestState>` in the current scope
 --> tests/fails/no_read_capacity_for_pay_per_request.rs:9:10
  |
7 |       DynamoDBTableBuilder::new(DynamoDBKey::new(key, AttributeType::String))
  |       -----------------------------------------------------------------------
  |       |
  |  _____method `read_capacity` is available on `DynamoDBTableBuilder<cloud_infra_core::dynamodb::StartState>`
  | |
8 | |         .pay_per_request_billing()
9 | |         .read_capacity(5)
  | |         -^^^^^^^^^^^^^ private field, not a method
  | |_________|
  |
  |
help: there is a method `max_read_capacity` with a similar name
  |
9 |         .max_read_capacity(5)
  |          ++++
